fix: comprobar roles en endpoints autenticados